--- a/src/app/project-create/project-create.component.html
+++ b/src/app/project-create/project-create.component.html
@@ -1,6 +1,2 @@
-<h1>
-    Create Project
-    </h1>
-    <button (click)="createContact()">
-        Create
-    </button>
+<h1> Create Project </h1>
+
