--- a/src/app/projects-list/projects-list.component.html
+++ b/src/app/projects-list/projects-list.component.html
@@ -1,12 +1,14 @@
-<div>
-    <table  style="width:40%">
-      <thead>
-          
-      </thead>
-      <tbody>
-      <tr *ngFor="let project of projects">
-        <td> <a routerLink="/projects/{{ project.id }}/suites">{{ project.name }}</a> </td>
-      </tr>
-    </tbody>
-    </table>
-</div>
+
+<mat-list>
+  <h3 mat-subheader>Projects
+    <button mat-icon-button>
+      <mat-icon id="addIcon" aria-label="Projects" [routerLink]="'/create-project'">add_box</mat-icon>
+    </button>
+  </h3>
+  <mat-list-item *ngFor="let project of projects">
+    <mat-icon class="project-icon" mat-list-icon>folder</mat-icon>
+    <a mat-line routerLink="/projects/{{ project.id }}/suites">{{project.name}}</a>
+  <mat-divider></mat-divider>
+  </mat-list-item>
+</mat-list>
+
