--- a/src/app/suites-list/suites-list.component.html
+++ b/src/app/suites-list/suites-list.component.html
@@ -1,5 +1,11 @@
-<ul class="heroes">
-  <li *ngFor="let suite of suites">
-    <span>{{ suite.name }}</span>
-  </li>
-</ul>
+<mat-list>
+  <h3 mat-subheader>Suites
+    <button mat-icon-button>
+      <mat-icon id="addIcon" aria-label="Suites" [routerLink]="">add_box</mat-icon>
+    </button></h3>
+  <mat-list-item *ngFor="let suite of suites">
+    <mat-icon class="project-icon" mat-list-icon>folder</mat-icon>
+    <a mat-line routerLink="/suites/{{ suite.id }}/cases">{{suite.name}}</a>
+  <mat-divider></mat-divider>
+  </mat-list-item>
+</mat-list>
