--- a/src/app/test-case-details/test-case-details.component.html
+++ b/src/app/test-case-details/test-case-details.component.html
@@ -13,7 +13,7 @@
     </ul>
   </mat-card-content>
   <mat-card-actions>
-    <button id="updateBtn" mat-button color="#2D2E2E">Update</button>
+    <button id="updateBtn" mat-button>Update</button>
     <button id="deleteBtn" mat-button>Delete</button>
   </mat-card-actions>
 </mat-card>
